--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="HandheldFriendly" content="true">
 <meta name="msvalidate.01" content="B6C713C1F4E407129EDEF7810A8B9BCB" />
-<meta name="description" content="程序员给女朋友用HTML5制作的3D相册，使用鼠标拖拽，能看到3D旋转效果，点击相片，相片能放大，移近。程序员发挥自己的专长，这是那些不懂编程的人望尘莫及的。本相册使用了HTML5的画布技术，需要谷歌浏览器或火狐浏览器等现代浏览器才能正常观看。">
+<meta name="description" content="用HTML5制作的3D相册，使用鼠标拖拽，能看到3D旋转效果，点击相片，相片能放大，移近。程序员发挥自己的专长，这是那些不懂编程的人望尘莫及的。本相册使用了HTML5的画布技术，需要谷歌浏览器或火狐浏览器等现代浏览器才能正常观看。">
 <meta name="keywords" content="canvas,3D,perspective,texturing,gallery">
-<link rel="shortcut icon" href="../favicon.ico"/>
-<title>程序员给女朋友用HTML5制作的3D相册</title>
+<title>用HTML5制作的3D相册</title>
+<link rel="shortcut icon" href="favicon.ico"/>
 <style>
 html {
 	overflow: hidden;
@@ -31,7 +31,7 @@ body {
 	background: #fff;
 }
 </style>
-<script src="../misc-res/js/ge1doot.js"></script>
+<script src="misc-res/js/ge1doot.js"></script>
 <script>
 /* 
  * ==============================================================
@@ -267,7 +267,7 @@ body {
 		load : function (data) {
 			
 			ge1doot.loadJS(
-					"../misc-res/js/imageTransform3D.js",
+					"./misc-res/js/imageTransform3D.js",
 					init, data
 				);
 		}
@@ -382,14 +382,14 @@ body {
 		}
 	],
 	options:{
-		imagesPath: "../misc-res/photos/"
+		imagesPath: "./misc-res/photos/"
 	}
 });
 </script>
 </head>
 <body>
 <canvas id="canvas">你的浏览器不支持HTML5画布技术，请使用谷歌浏览器。</canvas>
-<script src='../misc-res/js/jquery-1.7.2.min.js'></script>
+<script src='./misc-res/js/jquery-1.7.2.min.js'></script>
 </body>
 </html>
 <!-- Performance optimized by W3 Total Cache. 
